# snapp-mle-task

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  docker-compose-dev.yml  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
.shell/: complexity.sh  cov.sh  maintainability.sh  pylint.sh
rd/: entrances.html  main.ipynb
snapp_mle_task/: __init__.py  constant.py  logger.py  main.py
snapp_mle_task/lib/: db.py  nearest_entrance.py
snapp_mle_task/lib/schema/: entrance.py
snapp_mle_task/routers/: http_entrance.py
snapp_mle_task/scripts/: data_populator.py
tests/: test_db.py  test_http_entrance.py
